--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Travis Scott Sound Board</title>
+		<title>Travis Scott Soundboard</title>
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
 		<script>
-			function PlaySound() {
-    		alert("On Press of it's lit");
-        var path = "./pack.mp3"
+			function PlaySound(fileName) {
+        var path = "./" + fileName + ".mp3"
         var sound = new Audio(path);
         sound.play();
 			}
 		</script>
 	</head>
-	<body>
+	<body class="body">
 		<nav>
 			<ul>
 				
@@ -20,18 +19,26 @@
 		</nav>
 		<div class="container">
     	<div class="blurb">
-        <h1>Travis Scott Sound Board</h1>
+        <h1 class="title">Travis Scott Soundboard</h1>
 		</div><!-- /.container -->
 
+		<ul>
+			<button class="button-1" onclick="PlaySound('audio/pack')">ALL</button>
+			<button class="button-1" onclick="PlaySound('audio/la-flame')">LA FLAME 1</button>
+			<button class="button-1" onclick="PlaySound('audio/la-flame2')">LA FLAME 2</button>
+			<button class="button-1" onclick="PlaySound('audio/straigh-up')">STRAIGHT UP</button>
+			<button class="button-1" onclick="PlaySound('audio/yeah')">YEAH</button>
+			<button class="button-1" onclick="PlaySound('audio/yeah-yeah-yeah')">YEAH YEAH YEAH</button>
+			<button class="button-1" onclick="PlaySound('audio/bricks')">BRICKS</button>
+			<button class="button-1" onclick="PlaySound('audio/dope')">DOPE</button>
+			<button class="button-1" onclick="PlaySound('audio/goddamn')">GODDAMN</button>
+			<button class="button-1" onclick="PlaySound('audio/its-lit')">IT'S LIT</button>
+			<button class="button-1" onclick="PlaySound('audio/ohmygod')">OH MY GOD</button>
+			<button class="button-1" onclick="PlaySound('audio/one-more-time')">ONE MORE TIME</button>
+		</ul>
 
-		<audio id="itslit"> </audio>
-		<button class="button-1" onclick="PlaySound()">IT'S LIT</button>
-		<button class="button-1">YEAH</button>
-		<button class="button-1">STRAIGHT UP</button>
-
-		<footer>
+		<footer class="footer">
     	<ul>
-        <li><a href="mailto:riley.colin5@husky.neu.edu">email</a></li>
         <li><a href="https://github.com/crileyy">github.com/crileyy</a></li>
 			</ul>
 		</footer>
