--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <h1 class="title">Travis Scott Soundboard</h1>
 		</div><!-- /.container -->
 
-		<ul>
+		<div class="list">
+		<ul class="button-list">
 			<button class="button-1" onclick="PlaySound('audio/pack')">ALL</button>
 			<button class="button-1" onclick="PlaySound('audio/la-flame')">LA FLAME 1</button>
 			<button class="button-1" onclick="PlaySound('audio/la-flame2')">LA FLAME 2</button>
@@ -36,6 +37,7 @@
 			<button class="button-1" onclick="PlaySound('audio/ohmygod')">OH MY GOD</button>
 			<button class="button-1" onclick="PlaySound('audio/one-more-time')">ONE MORE TIME</button>
 		</ul>
+		</div>
 
 		<footer class="footer">
     	<ul>
